update all entities